# CeeLightning-Server

./: CMakeLists.txt  CeeServer.c  README.md  ceeServer.c  config.c  utils.c
header_files/: config.h  db_helper.h  file_helper.h  http_helper.h  json_helper.h  router.h  routes.h  utils.h
lib/: db_helper.c  file_helper.c  http_helper.c  json_helper.c  router.c  routes.c
src/: index.html  users.html
src/scripts/: scripts.js
src/styles/: style.css
